# pulse-agent

./: .env.example  .gitignore  BIBLE.md  LICENSE  PULSE_TZ.md  README.md  pyproject.toml  requirements.txt
BUGS/: duplicating_rails_in_pulse_tab.md
data/synthetic/: archetypes.json  employees.json  positions.json  units.json
docs/: ARCHITECTURE.md  CHECKLISTS.md  DEVELOPMENT.md  HCM_FACADE.md
prompts/: ALIGNMENT_CHECK.md  COMMIT_REVIEW.md  CONSCIOUSNESS.md  DEEP_SELF_REVIEW.md  EVOLUTION_CLASSIFY.md  EVOLUTION_PLAN.md  SAFETY.md  SYSTEM.md
pulse/: __init__.py  chat.py  commit_review.py  config.py  consciousness.py  dashboard.py  deep_self_review.py  employee_card.py  evolution.py  git_ops.py  hcm_panels.py  improvement_backlog.py  llm.py  memory.py  pattern_register.py  reflection.py  server.py  state.py  version_ops.py
pulse/data_engine/: archetypes.py  hcm_schema.py  hcm_seed.py  marts.py  ml_features.py  ml_predict.py  ml_train.py  schema.py  seed.py  tick.py
scripts/: bootstrap.sh  ceo_emulation.py  ceo_emulator_loop.sh  seed.py  tick.py
systemd/: pulse.service
tests/: conftest.py  golden_questions.yaml  test_actionable_recommendations.py  test_app_shell.py  test_chat_basic.py  test_chat_fallback.py  test_consciousness.py  test_dashboard.py  test_data_seed.py  test_employee_card.py  test_evolution_dryrun.py  test_exec_sandbox.py  test_hcm_panels.py  test_hcm_schema.py  test_hcm_seed.py  test_marts.py  test_memory.py  test_ml.py  test_sidebar.py  test_smoke.py  test_tick.py  test_tools.py  test_versioning.py
web/: app.html  dashboard.html  index.html
(+16 files in other folders)
