[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pulse-agent"
version = "2.3.0"
description = "Pulse — self-evolving HR agent for Sber on Claude Agent SDK (Ouroboros lineage)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Pulse Project" }]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "claude-agent-sdk>=0.1.80",
    "pydantic>=2",
    "sqlite-utils>=3.35",
    "faker>=22",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "pandas>=2.2",
    "joblib>=1.3",
    "networkx>=3.2",
    "python-dotenv>=1.0",
    "GitPython>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "anyio>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pulse*"]
exclude = ["tests*", "scripts*", "data*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
